# docs/swagger.yaml
@@ -1,9 +1,130 @@
 basePath: /api
+definitions:
+  domain.Quiz:
+    properties:
+      answer:
+        type: string
+      question:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
   description: server
   title: Manu Swagger API
   version: "1.0"
-paths: {}
+paths:
+  /quiz:
+    get:
+      consumes:
+      - application/json
+      description: List all quizzes
+      operationId: list-quizzes
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: List all quizzes
+      tags:
+      - quiz
+    post:
+      consumes:
+      - application/json
+      description: Create a new quiz
+      operationId: create-quiz
+      parameters:
+      - description: Create quiz
+        in: body
+        name: quiz
+        required: true
+        schema:
+          $ref: '#/definitions/domain.Quiz'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+      summary: Create a new quiz
+      tags:
+      - quiz
+  /quiz/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a quiz by ID
+      operationId: get-quiz-by-id
+      parameters:
+      - description: Quiz ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: Get a quiz by ID
+      tags:
+      - quiz
+  /video:
+    get:
+      description: List out all videos in s3
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Internal Server Error
+      summary: List out all videos
+      tags:
+      - video
+    post:
+      description: Upload a video to S3
+      parameters:
+      - description: Video file
+        in: formData
+        name: file
+        required: true
+        type: file
+      - description: Unique key for the video
+        in: formData
+        name: key
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Upload a video
+      tags:
+      - video
+  /video/{id}:
+    get:
+      description: Get CloudFront url for specific id
+      parameters:
+      - description: Video ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Get the video url
+      tags:
+      - video
 swagger: "2.0"
