# internal/api/routes/quiz_route.go
@@ -15,6 +15,7 @@ func InitQuizRoutes(router *gin.Engine, logger *zap.Logger, dbAdapter *db.Databa
 	quiz := router.Group("/api/quiz")
 	{
 		quiz.GET("/:id", quizController.Get)
+		quiz.GET("/", quizController.List)
 		quiz.POST("/", quizController.Post)
 	}
 }
